@@ -635,10 +635,23 @@
           <scope>provided</scope>
       </dependency>
       <dependency>
+			<groupId>com.hp.hpl.jena</groupId>
+			<artifactId>jena</artifactId>
+			<version>2.6.2</version>
+			<scope>compile</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.hp.hpl.jena</groupId>
+			<artifactId>arq</artifactId>
+			<version>2.8.1</version>
+			<scope>compile</scope>
+		</dependency>
+      <!--
+      <dependency>
           <groupId>com.hp.hpl.jena</groupId>
           <artifactId>jena</artifactId>
           <version>2.6.5-SNAPSHOT</version>
-      </dependency>
+      </dependency>-->
 
   </dependencies>
 
