@@ -145,20 +145,24 @@ case "$1" in
 	#find current password
 	pwdplacehold="PWDLOD2"
 	currentpwd=$(sedml "s/.*JDBCpassword\\s*=\\s*\\([^\\n]*\\).*/\\1/p" /etc/lod2statworkbench/lod2statworkbench.conf)
+	echo "new pwd: $currentpwd"
 
 	if [ "$currentpwd" = "$pwdplacehold" ]
 	then
 	    currentpwd=$(sedml "s/.*rdf:about=\"http:\\/\\/localhost\\/virtuoso\">[^>]*>\\([^<]*\\)<.*/\\1/p" /etc/lod2statworkbench/configuration.rdf)
+	    echo "new pwd: $currentpwd"
 	fi
 
 	if [ "$currentpwd" = "$pwdplacehold" ]
 	then
-	    currentpwd=$(sedml "s/.*user_create_if_not_exists('lod2demo',\\s*'\\([^']*\\).*/\\1/p" /var/lib/lod2statworkbench/create_user.sql)
+	    currentpwd=$(sedml "s/.*user_create_if_not_exists('lod2statworkbench',\\s*'\\([^']*\\).*/\\1/p" /var/lib/lod2statworkbench/create_user.sql)
+	    echo "new pwd: $currentpwd"
 	fi
 
 	if [ "$currentpwd" = "$pwdplacehold" ]
 	then
-	    currentpwd=$(sedml "s/.*jdbcPWD>\\([^<]*)<.*/\\1/p" /etc/lod2statworkbench/storeconfig.rdf)
+	    currentpwd=$(sedml "s/.*<config:jdbcPWD>\\([^<]*\\).*/\\1/p" /etc/lod2statworkbench/storeconfig.rdf)
+	    echo "new pwd: $currentpwd"
 	fi
 
 	if [ "$currentpwd" = "$pwdplacehold" ]
